--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-heroku==0.3.1
 gunicorn==20.1.0
 Pillow==9.0.0
 psycopg2==2.9.3
+python-decouple==3.5
 sqlparse==0.4.2
 tzdata==2021.5
 whitenoise==5.3.0
